--- a/Project2025.1.vcxproj
+++ b/Project2025.1.vcxproj
@@ -129,7 +129,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="record.txt" />
+    <None Include="record.dat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
