--- a/Project2025.1.vcxproj.filters
+++ b/Project2025.1.vcxproj.filters
@@ -20,6 +20,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="record.txt" />
+    <None Include="record.dat" />
   </ItemGroup>
 </Project>
